<resources>
    <string name="app_name">Measure pressure</string>
    <string name="User">Добавить пользователя</string>
    <string name="History">История</string>
    <string name="Photo">Сделать снимок</string>
    <string name="Settings">Настройки</string>
    <string name="Meassure">Сделать запись</string>
    <string name="title_activity_history">History</string>
    <string name="Age">Год рождения</string>
    <string name="Sex">Пол</string>
    <string name="SexWoman">Ж</string>
    <string name="SexMan">М</string>
    <string name="chSex">Пол</string>
    <string name="Name">Имя</string>
    <string name="Add">Добавить</string>
    <string name="AddName">Введите Имя</string>
    <string name="EnterAge">День Рождения</string>
    <string name="EnterWeight">Введите Вес</string>
    <string name="btnAct">Снять измерение</string>
    <string name="btnAddFromGall">Загрузить из галереи</string>
    <string name="Weight">Вес</string>
    <string name="btnShowUsersAndMeasures">SHow Users And Measures</string>
    <string name="Id">Id</string>
    <string name="EnterID">Enter User Id</string>
    <string name="show">Show</string>
    <string name="Upper">Верхнее</string>
    <string name="Lower">Нижнее</string>
    <string name="Pulse">Пульс</string>
    <string name="EnterUpper">Enter Upper</string>
    <string name="EnterLower">Enter Lower</string>
    <string name="EnterPulse">Enter Pulse</string>
    <string name="Users">Пользователи</string>
</resources>
