<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.measurepressure.User">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:stretchColumns="1"
        app:layout_constraintBottom_toTopOf="@+id/btnAdd"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <TableRow>

            <TextView
                android:id="@+id/tvName"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/Name" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/AddName"
                android:inputType="textPersonName"
                android:padding="10dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tvAge"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/Age" />

            <EditText
                android:id="@+id/etAge"
                android:textIsSelectable="true"
                android:hint="@string/EnterAge" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tvSex"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/Sex" />

            <EditText
                android:id="@+id/etWeight"
                android:inputType="numberSigned"
                android:hint="@string/EnterWeight" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="65dp"
        android:padding="20dp"
        android:text="@string/Add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:onClick="onClickPhoto"
            android:padding="10dp"
            android:text="@string/Photo" />

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/btnPhoto"
            android:visibility="visible" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
