<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.measurepressure.History">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow>

                <TextView
                    android:id="@+id/tvID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/Id" />

                <EditText
                    android:id="@+id/etIDShow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/EnterID"
                    android:inputType="numberSigned" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btnShowAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="@string/show"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="111dp" />

        <TextView
            android:id="@+id/tvShowUserAndMeasure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
